argocd-managed/golang-basic-api/Service.golang-basic-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-basic-api
  namespace: apps
spec:
  selector:
    app: golang-basic-api
  ports:
  - port: 8080
    targetPort: 8080
