argocd-managed/golang-basic-api/Ingress.golang-basic-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: golang-basic-api
spec:
 rules:
   - host: golang-basic-api.my-minikube.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: golang-basic-api
               port:
                 number: 8080
